@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.8 2002/05/06 13:06:03 matthew Exp $
+# $Id: Makefile,v 1.9 2002/08/20 13:46:16 matthew Exp $
 
 CC=gcc
 CFLAGS=-g -Wall -Werror
@@ -25,7 +25,8 @@ clean:
 	rm -f *.o *~ core $(PROGS) *.yy.c
 
 install:
-	install -d $(BINDIR) $(MANDIR)/man{5,8}
+	install -d $(BINDIR) $(MANDIR)/man{5,7,8}
 	install -m755 $(PROGS) $(BINDIR)
 	install -m644 *.5 $(MANDIR)/man5
+	install -m644 *.7 $(MANDIR)/man7
 	install -m644 *.8 $(MANDIR)/man8
